--- a/ecommerce/src/index.css
+++ b/ecommerce/src/index.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 
-body {
+body, input {
   margin: 0;
   font-family: 'Roboto Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  height: 100vh;
   color: #887569;
+  background-color: #fafafa;
 }
 
 code {
